--- a/activities.html
+++ b/activities.html
@@ -21,14 +21,14 @@
     <div class="page">
       <h1>Hobbies and Activities</h1>
       <ul>
-        <li>Rowing</li>
-        <li>Singing</li>
-        <li>Being in a Fraternity</li>
+        <li>Eating</li>
+        <li>Breathing</li>
+        <li>Listening to Music</li>
       </ul>
     </div>
 
     <footer>
-      <p>&copy; 2021 Sammy Student |
+      <p>&copy; 2025 Tessa K
         <a href="https://github.com/prof-rossetti/student-site">source code</a>
       </p>
     </footer>
